refactor: use StandardCharsets instead of Strings for encoding in RestClient.java